--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ header {
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="dessert">
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://i.imgur.com/AOjL9W1.jpg" alt="Sandwich" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/ไอติมบ้านเนสเล่.html"><img src="https://i.imgur.com/AOjL9W1.jpg" alt="Sandwich" style="width:100%">
       <h3>ไอติมบ้านเนสเล่ @โรงช้าง</h3></a>
       <p>ร้านหมายเลข 34 เป็นร้านขายไอติมจากแบรนด์เนสเล่ มีเมนูไอติมมากมายหลาย...</p>
     </div>
