--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@ header {
   <!-- Pagination -->
   <div class="w3-center w3-padding-32">
     <div class="w3-bar">
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">«</a>
-      <a href="#" class="w3-bar-item w3-black w3-button">1</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">2</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">3</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
+      <a href="https://fianakorn.github.io/dessertinmore/" class="w3-bar-item w3-button w3-hover-black">«</a>
+      <a href="https://fianakorn.github.io/dessertinmore/" class="w3-bar-item w3-black w3-button">1</a>
+      <a href="https://fianakorn.github.io/dessertinmore/page2.html" class="w3-bar-item w3-button w3-hover-black">2</a>
+      <a href="https://fianakorn.github.io/dessertinmore/page3.html" class="w3-bar-item w3-button w3-hover-black">3</a>
+      <a href="https://fianakorn.github.io/dessertinmore/page2.html" class="w3-bar-item w3-button w3-hover-black">»</a>
     </div>
   </div>
   
