--- a/page2.html
+++ b/page2.html
@@ -72,9 +72,9 @@ header {
     <img src="https://scontent.fhdy4-1.fna.fbcdn.net/v/t1.15752-9/76747356_769690080124862_5784702133118959616_n.png?_nc_cat=100&_nc_oc=AQnoEqdIGbNICUyqbKdyV7_J_9ZsGCKsg64_lxRipA2ptjGvWXB7USvF69Pn5CFWTPE&_nc_ht=scontent.fhdy4-1.fna&oh=ad7cfe2bb0411ad2bc2d2b44e0260762&oe=5E842188">
     <h1></h1>
     <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Facebook</a></li>
-      <li><a href="#">Line</a></li>
+      <li><a href="#about">About Us</a></li>
+      <li><a href="https://www.facebook.com/Dessert-In-MORE-107792730696876">Facebook</a></li>
+      <li><a href="https://fianakorn.github.io/dessertinmore/qr-code.html">Line</a></li>
     </ul>
   </header>
 
@@ -90,22 +90,22 @@ header {
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="dessert">
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://i.imgur.com/WxDOKPL.jpg" alt="Sandwich" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/มินิแพนเค้ก.html"><img src="https://i.imgur.com/WxDOKPL.jpg" alt="Sandwich" style="width:100%">
       <h3>ร้านมินิแพนเค้ก @โรงช้าง</h3></a>
       <p>ร้านขายแพนเค้กไซส์มินิ มีหลากหลายขนาดให้เลือก จะใส่แก้วหรือใส่กล่อง...</p>
     </div>
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://i.imgur.com/H9gPlfO.jpg" alt="Steak" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/มันเดือย.html"><img src="https://i.imgur.com/H9gPlfO.jpg" alt="Steak" style="width:100%">
       <h3>ร้านลุงมี มัน-เดือย @โรงช้าง </h3></a>
       <p>ร้านขายมันเดือยตั้งอยู่ที่โรงช้าง มันเดือยคือขนมหวานชนิดหนึ่งที่มีส่วนผสมของมันสำปะหลังเชื่อม...</p>
     </div>
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://i.imgur.com/HNLmo04.jpg" alt="Cherries" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/พี่หนิงขนมหวาน.html"><img src="https://i.imgur.com/HNLmo04.jpg" alt="Cherries" style="width:100%">
       <h3>พี่หนิงขนมหวาน @โรงช้าง</h3></a>
       <p>ร้านหมายเลข 39 เป็นร้านขายขนมไทย ขนมที่ราดกระทิพร้อมใส่น้ำแข็ง มีทั้งเมนู ฟักทองเชื่อม...</p>
     </div>
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://i.imgur.com/H7PfP6j.jpg" alt="Cherries" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/น้ำนมถั่วเหลืองเพื่อสุขภาพ.html"><img src="https://i.imgur.com/H7PfP6j.jpg" alt="Cherries" style="width:100%">
       <h3>น้ำนมถั่วเหลืองเพื่อสุขภาพ @โรงช้าง</h3></a>
       <p>ร้านหมายเลข 29 เป็นร้านขายน้ำเต้าหู้เพื่อสุขภาพสำหรับคน Healthy...</p>
     </div>
@@ -114,22 +114,22 @@ header {
   <!-- Second Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://i.imgur.com/bpX2NXM.jpg" alt="Cherries" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/ทาร์ตไข่.html"><img src="https://i.imgur.com/bpX2NXM.jpg" alt="Cherries" style="width:100%">
       <h3>ร้านทาร์ตไข่ @โรงช้าง</h3></a>
       <p>เป็นร้านขายทาร์ตไข่ ในราคาเป็นกันเอง ชิ้นละ 15 บาท ตั้งอยู่ทีโรงช้าง...</p>
     </div>
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://i.imgur.com/7kGCkwk.jpg" alt="Cherries" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/ขนมไทยโบราณ.html"><img src="https://i.imgur.com/7kGCkwk.jpg" alt="Cherries" style="width:100%">
       <h3>ขนมไทยโบราณ @โรงช้าง</h3></a>
       <p>ร้านหมายเลข 37 เป็นร้านขายขนมไทยอีกเจ้านึง ขายทั้งโตเกียว ขนมเบื้อง...</p>
     </div>
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://i.imgur.com/Cy0CilW.jpg" alt="Cherries" style="width:100%" >
+        <a href="https://fianakorn.github.io/dessertinmore/OneMore.html"><img src="https://i.imgur.com/Cy0CilW.jpg" alt="Cherries" style="width:100%" >
       <h3>The Crepe @โรงช้าง</h3></a>
       <p>ร้านหมายเลข 2 เป็นร้านขายเครปญี่ปุ่น มีไส้หลากหลาย...</p>
     </div>
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://i.imgur.com/Otz3CyG.jpg" alt="Cherries" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/มินิแพนเค้ก.html"><img src="https://i.imgur.com/Otz3CyG.jpg" alt="Cherries" style="width:100%">
       <h3>ร้าน OneMore @โรงช้าง</h3></a>
       <p>ร้านหมายเลข 8 เป็นร้านขายนมสดปั่นไม่ประสมน้ำแข็ง!!...</p>
     </div>
@@ -138,11 +138,11 @@ header {
   <!-- Pagination -->
   <div class="w3-center w3-padding-32">
     <div class="w3-bar">
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">«</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">1</a>
-      <a href="#" class="w3-bar-item w3-black w3-button">2</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">3</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
+      <a href="https://fianakorn.github.io/dessertinmore/" class="w3-bar-item w3-button w3-hover-black">«</a>
+      <a href="https://fianakorn.github.io/dessertinmore/" class="w3-bar-item w3-button w3-hover-black">1</a>
+      <a href="https://fianakorn.github.io/dessertinmore/page2.html" class="w3-bar-item w3-black w3-button">2</a>
+      <a href="https://fianakorn.github.io/dessertinmore/page3.html" class="w3-bar-item w3-button w3-hover-black">3</a>
+      <a href="https://fianakorn.github.io/dessertinmore/page3.html" class="w3-bar-item w3-button w3-hover-black">»</a>
     </div>
   </div>
   
