--- a/page3.html
+++ b/page3.html
@@ -72,9 +72,9 @@ header {
     <img src="https://scontent.fhdy4-1.fna.fbcdn.net/v/t1.15752-9/76747356_769690080124862_5784702133118959616_n.png?_nc_cat=100&_nc_oc=AQnoEqdIGbNICUyqbKdyV7_J_9ZsGCKsg64_lxRipA2ptjGvWXB7USvF69Pn5CFWTPE&_nc_ht=scontent.fhdy4-1.fna&oh=ad7cfe2bb0411ad2bc2d2b44e0260762&oe=5E842188">
     <h1></h1>
     <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Facebook</a></li>
-      <li><a href="#">Line</a></li>
+      <li><a href="#about">About Us</a></li>
+      <li><a href="https://www.facebook.com/Dessert-In-MORE-107792730696876">Facebook</a></li>
+      <li><a href="https://fianakorn.github.io/dessertinmore/qr-code.html">Line</a></li>
     </ul>
   </header>
 
@@ -90,22 +90,22 @@ header {
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="dessert">
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://img.wongnai.com/p/800x0/2019/03/16/799ce37ca3aa41febea72c0123c96fb1.jpg" alt="Sandwich" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/KruCha.html"><img src="https://img.wongnai.com/p/800x0/2019/03/16/799ce37ca3aa41febea72c0123c96fb1.jpg" alt="Sandwich" style="width:100%">
       <h3>ร้าน KruCha @โรงช้าง</h3></a>
       <p>เป็นร้านขายน้ำปั่น ทั้งผลไม้ปั่น,โซดา,กาแฟ เมนูนมสดนมปั่นหลายชนิด...</p>
     </div>
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://i.imgur.com/iZQCevZ.jpg" alt="Steak" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/FongNom.html"><img src="https://i.imgur.com/iZQCevZ.jpg" alt="Steak" style="width:100%">
       <h3>ร้าน Fong Nom @วจก. </h3></a>
       <p>ร้านฟองนมตั้งอยู่ในตึด วจก. ขายเมนูเครื่องดื่ม ร้อน เย็น ปั่น...</p>
     </div>
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://i.imgur.com/hzexEg5.jpg" alt="Cherries" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/coffeeArt.html"><img src="https://i.imgur.com/hzexEg5.jpg" alt="Cherries" style="width:100%">
       <h3>Coffee Arts @ศิลปศาสตร์</h3></a>
       <p>เป็นร้านขายเครื่องดื่มตั้งอยู ณ คณะ ศิลปศาสตร์ มีเมนูเครื่องดื่มร้อนเย็นปั่นพร้อมทั้งยังมีร้านสะดวกซื่อ...</p>
     </div>
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://i.imgur.com/MTtEpOQ.jpg" alt="Cherries" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/BZul.html"><img src="https://i.imgur.com/MTtEpOQ.jpg" alt="Cherries" style="width:100%">
       <h3>ร้าน B Zul @โรงช้าง</h3></a>
       <p>เป็นร้านขายเครื่องดื่มดับกระหาย ราคาประหยัด ตั้งอยู่ที่โรงช้าง มีเมนูน้ำปั่นหลากหลาย...</p>
     </div>
@@ -114,7 +114,7 @@ header {
   <!-- Second Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
-        <a href="https://www.facebook.com/Dessert-In-MORE-107792730696876"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/7-eleven_logo.svg/1200px-7-eleven_logo.svg.png" alt="Cherries" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/7eleven.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/7-eleven_logo.svg/1200px-7-eleven_logo.svg.png" alt="Cherries" style="width:100%">
       <h3>7 Eleven @โรงช้าง</h3></a>
       <p>ร้านสะดวกซื้อที่เป็นที่ยมและพบได้ทั่วไปก็เปิดให้บริการอยู่ที่ข้างหน้าโรงช้าง มีสินค้าหลากหลาย...</p>
     </div>
@@ -123,11 +123,11 @@ header {
   <!-- Pagination -->
   <div class="w3-center w3-padding-32">
     <div class="w3-bar">
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">«</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">1</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">2</a>
-      <a href="#" class="w3-bar-item w3-black w3-button">3</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
+      <a href="https://fianakorn.github.io/dessertinmore/page2.html" class="w3-bar-item w3-button w3-hover-black">«</a>
+      <a href="https://fianakorn.github.io/dessertinmore/" class="w3-bar-item w3-button w3-hover-black">1</a>
+      <a href="https://fianakorn.github.io/dessertinmore/page2.html" class="w3-bar-item w3-button w3-hover-black">2</a>
+      <a href="https://fianakorn.github.io/dessertinmore/page3.html" class="w3-bar-item w3-black w3-button">3</a>
+      <a href="https://fianakorn.github.io/dessertinmore/page3.html" class="w3-bar-item w3-button w3-hover-black">»</a>
     </div>
   </div>
   
