--- a/KruCha.html
+++ b/KruCha.html
@@ -70,9 +70,9 @@
     <img src="https://scontent.fhdy4-1.fna.fbcdn.net/v/t1.15752-9/76747356_769690080124862_5784702133118959616_n.png?_nc_cat=100&_nc_oc=AQnoEqdIGbNICUyqbKdyV7_J_9ZsGCKsg64_lxRipA2ptjGvWXB7USvF69Pn5CFWTPE&_nc_ht=scontent.fhdy4-1.fna&oh=ad7cfe2bb0411ad2bc2d2b44e0260762&oe=5E842188">
     <h1></h1>
     <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Facebook</a></li>
-      <li><a href="#">Line</a></li>
+      <li><a href="#about">About Us</a></li>
+      <li><a href="https://www.facebook.com/Dessert-In-MORE-107792730696876">Facebook</a></li>
+      <li><a href="https://fianakorn.github.io/dessertinmore/qr-code.html">Line</a></li>
     </ul>
   </header>
   
