--- a/qr-code.html
+++ b/qr-code.html
@@ -71,7 +71,7 @@
 
 <body>
   <header>
-    <img src="https://scontent.fhdy4-1.fna.fbcdn.net/v/t1.15752-9/76767503_741600219693344_2611109622253092864_n.png?_nc_cat=101&_nc_eui2=AeFCdR6pd0tJ0MK3ZKxyL1ZanQGH3KqcVMQqy_B3NUmniL76C_tIO_qO2CXFafVvi8-_cplzebBIn-l3g7ptTk8KDerAJwhC2tShy6NqiMgUGQ&_nc_ohc=JbzB6nfTsrMAQkfRuL6PLqDtdtdrpymw__q8t2rH3Ibl6jlN5NMk4a-YA&_nc_ht=scontent.fhdy4-1.fna&oh=a7d23222aa3821c819bad40035e45b38&oe=5E89178B">
+    <img src="https://scontent.fhdy4-1.fna.fbcdn.net/v/t1.15752-9/76747356_769690080124862_5784702133118959616_n.png?_nc_cat=100&_nc_oc=AQnoEqdIGbNICUyqbKdyV7_J_9ZsGCKsg64_lxRipA2ptjGvWXB7USvF69Pn5CFWTPE&_nc_ht=scontent.fhdy4-1.fna&oh=ad7cfe2bb0411ad2bc2d2b44e0260762&oe=5E842188">
     <h1></h1>
     <ul>
       <li><a href="#about">About Us</a></li>
@@ -81,7 +81,7 @@
   </header>
 
   
-<p align="middle"><img src="https://scontent.fhdy4-1.fna.fbcdn.net/v/t1.15752-9/78262536_858237387943497_5327709701494800384_n.png?_nc_cat=102&_nc_eui2=AeHp7rxYAl8OdqBy5IxXPPqRLM9qqziNtmGZjfTuoa5z-sEJzkWFv5jBcEWW1JzIM_0sVxX9SKkZ5-3KnlKmjJspcwThc7X-L3RKl3alzvLkUg&_nc_ohc=elQgrbzFMwMAQlwXkj6gfMy7qcyYPakxbVoHhc6DtD1obmOEg5J3mQCFA&_nc_ht=scontent.fhdy4-1.fna&oh=a41aaa7a7939f77fed204472fde3f001&oe=5E72AABE" class="center" alt=""></p>
+<p align="middle"><img src="https://scontent.fhdy4-1.fna.fbcdn.net/v/t1.15752-9/76767503_741600219693344_2611109622253092864_n.png?_nc_cat=101&_nc_eui2=AeFCdR6pd0tJ0MK3ZKxyL1ZanQGH3KqcVMQqy_B3NUmniL76C_tIO_qO2CXFafVvi8-_cplzebBIn-l3g7ptTk8KDerAJwhC2tShy6NqiMgUGQ&_nc_ohc=JbzB6nfTsrMAQkfRuL6PLqDtdtdrpymw__q8t2rH3Ibl6jlN5NMk4a-YA&_nc_ht=scontent.fhdy4-1.fna&oh=a7d23222aa3821c819bad40035e45b38&oe=5E89178B" class="center" alt=""></p>
 
 
 
