--- a/page2.html
+++ b/page2.html
@@ -124,12 +124,12 @@ header {
       <p>ร้านหมายเลข 37 เป็นร้านขายขนมไทยอีกเจ้านึง ขายทั้งโตเกียว ขนมเบื้อง...</p>
     </div>
     <div class="w3-quarter">
-        <a href="https://fianakorn.github.io/dessertinmore/OneMore.html"><img src="https://i.imgur.com/Cy0CilW.jpg" alt="Cherries" style="width:100%" >
+        <a href="https://fianakorn.github.io/dessertinmore/TheCrepe.html"><img src="https://i.imgur.com/Cy0CilW.jpg" alt="Cherries" style="width:100%" >
       <h3>The Crepe @โรงช้าง</h3></a>
       <p>ร้านหมายเลข 2 เป็นร้านขายเครปญี่ปุ่น มีไส้หลากหลาย...</p>
     </div>
     <div class="w3-quarter">
-        <a href="https://fianakorn.github.io/dessertinmore/มินิแพนเค้ก.html"><img src="https://i.imgur.com/Otz3CyG.jpg" alt="Cherries" style="width:100%">
+        <a href="https://fianakorn.github.io/dessertinmore/OneMore.html"><img src="https://i.imgur.com/Otz3CyG.jpg" alt="Cherries" style="width:100%">
       <h3>ร้าน OneMore @โรงช้าง</h3></a>
       <p>ร้านหมายเลข 8 เป็นร้านขายนมสดปั่นไม่ประสมน้ำแข็ง!!...</p>
     </div>
