--- a/page3.html
+++ b/page3.html
@@ -110,28 +110,32 @@ header {
       <p>เป็นร้านขายเครื่องดื่ม ตั้งอยู่ทีคณะนิติศาสตร์ มีเมนูร้อน เย็น ปั่น ดังนี้ เอสเพลสโซ่ ดับเบิ้ลเอกเพรส อเมริกาโน่...</p>
     </div>
   </div>
-  
-  <!-- Second Photo Grid-->
+
+<!-- Second Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
         <a href="https://fianakorn.github.io/dessertinmore/CityDuck.html"><img src="https://i.imgur.com/AqDFlRE.jpg" alt="Cherries" style="width:100%">
       <h3>7 Eleven @โรงช้าง</h3></a>
       <p>ร้านสะดวกซื้อที่เป็นที่ยมและพบได้ทั่วไปก็เปิดให้บริการอยู่ที่ข้างหน้าโรงช้าง มีสินค้าหลากหลาย...</p>
     </div>
-  </div>
     <div class="w3-quarter">
         <a href="https://fianakorn.github.io/dessertinmore/Upgrade.html"><img src="https://i.imgur.com/Q54FxdT.jpg" alt="Cherries" style="width:100%">
       <h3>7 Eleven @โรงช้าง</h3></a>
       <p>ร้าน Up Grade เป็นร้านขายสารพัดของหวานที่ขายตั้งแต่ ผลไม้ ขนมปังปิ้ง น้ำปั่น น้ำชง ขนมจีบ ซาลาเปา น้ำอัดลม ขนมขบเคี้ยว...</p>
     </div>
-  </div>
-   <div class="w3-quarter">
+    <div class="w3-quarter">
         <a href="https://fianakorn.github.io/dessertinmore/7eleven.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/7-eleven_logo.svg/1200px-7-eleven_logo.svg.png" alt="Cherries" style="width:100%">
       <h3>7 Eleven @โรงช้าง</h3></a>
       <p>ร้านสะดวกซื้อที่เป็นที่ยมและพบได้ทั่วไปก็เปิดให้บริการอยู่ที่ข้างหน้าโรงช้าง มีสินค้าหลากหลาย...</p>
     </div>
+    </div>
+    <div class="w3-quarter">
+        <a href="https://fianakorn.github.io/dessertinmore/OneMore.html"><img src="https://i.imgur.com/Otz3CyG.jpg" alt="Cherries" style="width:100%">
+      <h3>ร้าน OneMore @โรงช้าง</h3></a>
+      <p>ร้านหมายเลข 8 เป็นร้านขายนมสดปั่นไม่ประสมน้ำแข็ง!!...</p>
+   </div>
   </div>
-
+	
   <!-- Pagination -->
   <div class="w3-center w3-padding-32">
     <div class="w3-bar">
