--- a/page3.html
+++ b/page3.html
@@ -115,12 +115,12 @@ header {
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
         <a href="https://fianakorn.github.io/dessertinmore/CityDuck.html"><img src="https://i.imgur.com/AqDFlRE.jpg" alt="Cherries" style="width:100%">
-      <h3>7 Eleven @โรงช้าง</h3></a>
+      <h3>City Ducks @คณะนิติศาสตร์</h3></a>
       <p>ร้านสะดวกซื้อที่เป็นที่ยมและพบได้ทั่วไปก็เปิดให้บริการอยู่ที่ข้างหน้าโรงช้าง มีสินค้าหลากหลาย...</p>
     </div>
     <div class="w3-quarter">
         <a href="https://fianakorn.github.io/dessertinmore/Upgrade.html"><img src="https://i.imgur.com/Q54FxdT.jpg" alt="Cherries" style="width:100%">
-      <h3>7 Eleven @โรงช้าง</h3></a>
+      <h3>Up Grade @คณะศิลปศาสตร์</h3></a>
       <p>ร้าน Up Grade เป็นร้านขายสารพัดของหวานที่ขายตั้งแต่ ผลไม้ ขนมปังปิ้ง น้ำปั่น น้ำชง ขนมจีบ ซาลาเปา น้ำอัดลม ขนมขบเคี้ยว...</p>
     </div>
     <div class="w3-quarter">
@@ -156,7 +156,7 @@ header {
     <div class="w3-padding-32">
       <h4><b>เราคือนักศึกษาคณะ วิทยาการจัดการ สาขาระบบสารสนเทศทางธุรกิจ</b></h4>
       <h6><i>ที่จัดทำโปรเจคขึ้นเพื่อหวังเกรด A อย่างยิ่งยวด</i></h6>
-      <p>Project DIMBOT เป็นโปรเจคเกี่ยวกับการหาร้านขายของหวานด้วยการตอบโต้จากแชทบอทเพื่อหาร้านของหวานที่เข้าเงื่อนไขของผู้ใช่มากที่สุดในบริเวณ โรงช้าง คณะวิทยาการจัดการ ไปจนถึง คณะนิติศาสตร์.</p>
+      <p>Project DIMBOT เป็นโปรเจคเกี่ยวกับการหาร้านขายของหวานด้วยการตอบโต้จากแชทบอทเพื่อหาร้านของหวานที่เข้าเงื่อนไขของผู้ใช้มากที่สุดในบริเวณ โรงช้าง คณะวิทยาการจัดการ ไปจนถึง คณะนิติศาสตร์.</p>
     </div>
   </div>
   <hr>
